--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -11,4 +11,6 @@ layout: default
     <div class="article-post">
     {{content}}
     </div>
+
+    <div class="pointerup"><i class="fa fa-caret-up"></i></div>
 </section>
