--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,5 @@
 ---
 layout: default
-disqus: false
 archive: false
 post_class: post-template
 ---
@@ -28,5 +27,7 @@ post_class: post-template
 
 	</div>
 </div>
+
+<div class="pointerup"><i class="fa fa-caret-up"></i></div>
 <!-- End Article
 ================================================== -->
