--- a/_includes/featuredbox.html
+++ b/_includes/featuredbox.html
@@ -7,7 +7,7 @@
                 <div class="h-100">
                     <div class="wrapthumbnail">
                         <a href="{{ post.url | absolute_url }}">
-                            <span class="thumbnail d-block" style="background-image:url({% if post.image contains "://" %}{{ post.image }}{% else %}{{ post.image | absolute_url }}{% endif %});">
+                            <span class="thumbnail" style="background-image:url({{ post.image }});">
                             </span>
                         </a>
                     </div>
@@ -18,7 +18,7 @@
                     <div class="card">
                         <div class="card-body">
                             <h2 class="card-title"><a class="text-dark" href="{{ post.url | absolute_url }}">{{ post.title }}</a></h2>
-                            <h4 class="card-text">{{ post.excerpt | strip_html | truncatewords:25 }}</h4>
+                            <h4 class="card-text"><a class="text-dark" href="{{ post.url | absolute_url }}">{{ post.excerpt | strip_html | truncatewords:25 }}</a></h4>
                         </div>
                     </div>
                 </div>
