--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,15 +22,15 @@
     
 <script src="{{ site.baseurl }}/assets/js/jquery.min.js"></script>
 
-    <style>
-        .listfeaturedtag:hover .thumbnail {
-            -moz-transform: scale(1.1);
-            -o-transform: scale(1.1);
-            -ms-transform: scale(1.1);
-            -webkit-transform: scale(1.1);
-            transform: scale(1.1)
-        }
-    </style>
+<!--    <style>-->
+<!--        .listfeaturedtag:hover .thumbnail {-->
+<!--            -moz-transform: scale(1.1);-->
+<!--            -o-transform: scale(1.1);-->
+<!--            -ms-transform: scale(1.1);-->
+<!--            -webkit-transform: scale(1.1);-->
+<!--            transform: scale(1.1)-->
+<!--        }-->
+<!--    </style>-->
 </head>
     
 {% capture layout %}{% if page.layout %}layout-{{ page.layout }}{% endif %}{% endcapture %}
