--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,15 +43,19 @@
     
     <div class="container pr-0">
 
-    <div style="width: 250px">
-        <a class="navbar-brand" href="{{ site.baseurl }}">
-            <img src="{{ site.baseurl }}/assets/images/pbouda.png"/>
-        </a>
-        <span style="padding-left: 30px; font-size: 12px; font-weight: bold;">{{ site.description }}</span>
-    </div>
+        <ul style="list-style-type: none;">
+            <li>
+                <a class="navbar-brand" href="{{ site.baseurl }}">
+                    <img src="{{ site.baseurl }}/assets/images/pbouda.png"/>
+                </a>
+            </li>
+            <li>
+                <span style="padding-left: 30px; font-size: 14px; font-weight: bold;">{{ site.description }}</span>
+            </li>
+        </ul>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMediumish" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarMediumish">
