--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,17 +42,12 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top mediumnavigation nav-down">
     
     <div class="container pr-0">
-
-        <ul style="list-style-type: none;">
-            <li>
-                <a class="navbar-brand" href="{{ site.baseurl }}">
-                    <img src="{{ site.baseurl }}/assets/images/pbouda.png"/>
-                </a>
-            </li>
-            <li>
-                <span style="padding-left: 30px; font-size: 14px; font-weight: bold;">{{ site.description }}</span>
-            </li>
-        </ul>
+        <div class="mainheading" style="width: 80%;">
+            <h1 class="sitetitle" style="float: left; padding-right: 25px;">{{ site.name }}</h1>
+            <p class="lead" style="margin-top: 10px">
+            {{ site.description }}
+            </p>
+        </div>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMediumish" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
