--- a/_includes/section-featured.html
+++ b/_includes/section-featured.html
@@ -31,7 +31,7 @@
 
             <div class="splide__track animate">
               <div class="splide__list">
-                {% assign sorted = site.projects | sort: 'date' | reverse %}
+                {% assign sorted = site.projects | reverse %}
                 {% for project in sorted %}
                 {% if project.featured == true %}
                 <article class="project col-4 col-d-6 col-t-12 splide__slide">
