--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,15 +9,15 @@
             <div class="col col-4 col-d-12">
               <div class="footer__info">
                 <div class="logo-footer">
-                  <a class="logo-footer__link" href="{{ site.baseurl }}/">
-                    {% if site.data.settings.logo or site.data.settings.logo_dark %}
-                    <img class="logo-footer__image" style="border-radius: 5px" src="{{ site.baseurl }}{{ site.data.settings.logo }}"
-                      alt="{{ site.data.settings.title }}">
-                    <img class="logo-footer__image__dark" src="{{ site.baseurl }}{{ site.data.settings.logo_dark }}" alt="{{ site.data.settings.title }}">
-                    {% else %}
-                    {{ site.data.settings.title }}
-                    {% endif %}
-                  </a>
+<!--                  <a class="logo-footer__link" href="{{ site.baseurl }}/">-->
+<!--                    {% if site.data.settings.logo or site.data.settings.logo_dark %}-->
+<!--                    <img class="logo-footer__image" style="border-radius: 5px" src="{{ site.baseurl }}{{ site.data.settings.logo }}"-->
+<!--                      alt="{{ site.data.settings.title }}">-->
+<!--                    <img class="logo-footer__image__dark" src="{{ site.baseurl }}{{ site.data.settings.logo_dark }}" alt="{{ site.data.settings.title }}">-->
+<!--                    {% else %}-->
+<!--                    {{ site.data.settings.title }}-->
+<!--                    {% endif %}-->
+<!--                  </a>-->
                 </div>
               </div>
             </div>
