--- a/_includes/section-featured.html
+++ b/_includes/section-featured.html
@@ -11,32 +11,32 @@
     <div class="container">
       <div class="row">
         <div class="col col-12">
-          <div class="featured__slider__inner splide">
+<!--          <div class="featured__slider__inner splide">-->
 
-            <div class="featured__info">
-              <div class="featured__head">
-                {% if site.data.settings.featured.featured_title %}
-                <h2 class="featured__title">{{ site.data.settings.featured.featured_title }}</h2>
-                {% endif %}
-                <div class="splide__arrows slider-controls">
-                  <button class="splide__arrow--prev prev">
-                    <i class="fa-solid fa-chevron-left"></i>
-                  </button>
-                  <button class="splide__arrow--next next">
-                    <i class="fa-solid fa-chevron-right"></i>
-                  </button>
-                </div>
-              </div>
-            </div>
+<!--            <div class="featured__info">-->
+<!--              <div class="featured__head">-->
+<!--                {% if site.data.settings.featured.featured_title %}-->
+<!--                <h2 class="featured__title">{{ site.data.settings.featured.featured_title }}</h2>-->
+<!--                {% endif %}-->
+<!--                <div class="splide__arrows slider-controls">-->
+<!--                  <button class="splide__arrow&#45;&#45;prev prev">-->
+<!--                    <i class="fa-solid fa-chevron-left"></i>-->
+<!--                  </button>-->
+<!--                  <button class="splide__arrow&#45;&#45;next next">-->
+<!--                    <i class="fa-solid fa-chevron-right"></i>-->
+<!--                  </button>-->
+<!--                </div>-->
+<!--              </div>-->
+<!--            </div>-->
 
             <div class="splide__track animate">
-              <div class="splide__list">
+              <div class="splide__list" style="padding-top: 20px">
                 {% assign sorted = site.projects | reverse %}
-                {% for project in sorted %}
+                {% for project in site.projects %}
                 {% if project.featured == true %}
                 <article class="project col-4 col-d-6 col-t-12 splide__slide">
-                  <div class="project__content">
-                    <a href="{{ project.url | relative_url }}" class="project__image">
+                  <div class="project__content" style="padding: 20px">
+                    <a href="{{ project.url | relative_url }}" class="project__image" >
                       {% if project.image and project.video_embed %}
                       <div class="video-icon">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
@@ -46,7 +46,7 @@
                       {% endif %}
                       <img class="lazy" data-src="{{ project.image | relative_url }}" alt="{{ project.title }}">
                     </a>
-                    <div class="project__info">
+                    <div class="project__info"  style="text-align: center">
                       {% if project.label %}
                       <div class="project__label">{{ project.label }}</div>
                       {% endif %}
@@ -61,7 +61,7 @@
               </div>
             </div>
 
-          </div>
+<!--          </div>-->
         </div>
       </div>
     </div>
