--- a/_includes/section-featured.html
+++ b/_includes/section-featured.html
@@ -11,23 +11,23 @@
     <div class="container">
       <div class="row">
         <div class="col col-12">
-<!--          <div class="featured__slider__inner splide">-->
+          <div class="featured__slider__inner splide">
 
-<!--            <div class="featured__info">-->
-<!--              <div class="featured__head">-->
-<!--                {% if site.data.settings.featured.featured_title %}-->
-<!--                <h2 class="featured__title">{{ site.data.settings.featured.featured_title }}</h2>-->
-<!--                {% endif %}-->
-<!--                <div class="splide__arrows slider-controls">-->
-<!--                  <button class="splide__arrow&#45;&#45;prev prev">-->
-<!--                    <i class="fa-solid fa-chevron-left"></i>-->
-<!--                  </button>-->
-<!--                  <button class="splide__arrow&#45;&#45;next next">-->
-<!--                    <i class="fa-solid fa-chevron-right"></i>-->
-<!--                  </button>-->
-<!--                </div>-->
-<!--              </div>-->
-<!--            </div>-->
+            <div class="featured__info">
+              <div class="featured__head">
+                {% if site.data.settings.featured.featured_title %}
+                <h2 class="featured__title">{{ site.data.settings.featured.featured_title }}</h2>
+                {% endif %}
+                <div class="splide__arrows slider-controls">
+                  <button class="splide__arrow--prev prev">
+                    <i class="fa-solid fa-chevron-left"></i>
+                  </button>
+                  <button class="splide__arrow--next next">
+                    <i class="fa-solid fa-chevron-right"></i>
+                  </button>
+                </div>
+              </div>
+            </div>
 
             <div class="splide__track animate">
               <div class="splide__list" style="padding-top: 20px">
@@ -61,7 +61,7 @@
               </div>
             </div>
 
-<!--          </div>-->
+          </div>
         </div>
       </div>
     </div>
