--- a/_sass/3-modules/_featured-section.scss
+++ b/_sass/3-modules/_featured-section.scss
@@ -15,7 +15,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 32px;
+  //margin-bottom: 32px;
 }
 
 .featured__title {
