--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,12 +3,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>{% if page.title %}{{ page.title }}{% else %}{{ site.data.settings.title }}{% endif %}</title>
-  <meta name='description' content='{% if page.description %}{{ page.description | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.data.settings.description }}{% endif %}'>
+  <title>Jeffrey, The JFR Analyst</title>
+  <meta name='description' content="Leveraging my expertise, I'm here to collaborate with you on seeking of performance gaps in your Java applications. Let's play and learn together!">
 
   <link rel="icon" href="/images/favicon.png" />
-  <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
-  <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
+  <link rel="canonical" href="/">
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
