--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,8 +12,13 @@
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Jeffrey, The JFR Analyst">
+  <meta name="twitter:creator" content="@jeffrey_analyst" />
   <meta name="twitter:description" content="Leveraging my expertise, I'm here to collaborate with you on seeking of performance gaps in your Java applications. Let's play and learn together!">
-  <meta name="twitter:image:src" content="/images/01.jpg">
+  <meta name="twitter:image:src" content="https://www.jeffrey-analyst.cafe/images/01.jpg">
+  <meta property="og:url" content="https://www.jeffrey-analyst.cafe/" />
+  <meta property="og:title" content="Jeffrey, The JFR Analyst" />
+  <meta property="og:description" content="Leveraging my expertise, I'm here to collaborate with you on seeking of performance gaps in your Java applications. Let's play and learn together!" />
+  <meta property="og:image" content="https://www.jeffrey-analyst.cafe/images/01.jpg" />
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
