--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,7 @@
   <link rel="canonical" href="/">
 
   <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Jeffrey, The JFR Analyst">
   <meta name="twitter:creator" content="@jeffrey_analyst" />
   <meta name="twitter:description" content="Leveraging my expertise, I'm here to collaborate with you on seeking of performance gaps in your Java applications. Let's play and learn together!">
