add link to literature

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,7 +14,7 @@
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Jeffrey, The JFR Analyst">
+    <meta name="twitter:title" content="{{ page.title }}">
     <meta name="twitter:creator" content="@jeffrey_analyst" />
     <meta property="og:url" content="{{ page.url }}" />
     <meta property="og:title" content="{{ page.title }}" />
