add link to literature

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,7 @@
     <meta name='description' content="{{ page.description }}">
 
     <link rel="icon" href="/images/favicon.png" />
-    <link rel="canonical" href="/">
+<!--    <link rel="canonical" href="/">-->
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary">
