--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Jeffrey, The JFR Analyst</title>
+    <title>{{ page.title }}</title>
     <meta name='description' content="{{ page.description }}">
 
     <link rel="icon" href="/images/favicon.png" />
