--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -1,88 +1,73 @@
----
-layout: default
----
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>{{ page.title }}</title>
+    <meta name='description' content="{{ page.description }}">
+
+    <link rel="icon" href="/images/favicon.png" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="{{ page.title }}">
+    <meta name="twitter:creator" content="@jeffrey_analyst" />
+    <meta property="og:url" content="{{ page.url }}" />
+    <meta property="og:title" content="{{ page.title }}" />
+    <meta property="og:description" content="{{ page.description }}" />
+    <meta property="og:image" content="https://www.jeffrey-analyst.cafe/images/01.jpg" />
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" as="style">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+
+    <script>
+        document.documentElement.setAttribute("light", "");
+        document.documentElement.classList.add('light-mode');
+    </script>
+
+    <style>
+        {% capture include_to_scssify %}
+        {% include main.scss %}
+        {% endcapture %}
+        {{ include_to_scssify | scssify }}
+    </style>
+</head>
+
+<body class="{% if page.url == '/' %}home-page{% endif %}">
+
+{% include header.html %}
+
+<!-- begin content -->
+<main class="content" aria-label="Content">
 
 <div class="container">
 
-<!--  <div class="project-head">-->
-<!--    {% if page.video_embed %}-->
-<!--    <div class="project-video">-->
-<!--      <div class="project-video__wrap">-->
-<!--        <iframe src="{{ page.video_embed }}" loading="lazy" width="640" height="360" frameborder="0"-->
-<!--          webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>-->
-<!--      </div>-->
-<!--    </div>-->
-<!--    {% else %}-->
-<!--    {% if page.image %}-->
-<!--    <div class="project-image">-->
-<!--      <img class="lazy" data-src="{{ page.image | relative_url }}" alt="{{ page.title }}">-->
-<!--    </div>-->
-<!--    {% endif %}-->
-<!--    {% endif %}-->
-<!--  </div>-->
-
-  <div class="project-content">
-
-    <div class="project-info">
-<!--      {% if page.label %}-->
-<!--      <div class="project-label">{{ page.label }}</div>-->
-<!--      {% endif %}-->
-      {% if page.title %}
-      <h1 class="project-title">{{ page.title }}</h1>
-      {% endif %}
-    </div>
-
-    {{ content }}
-
-<!--    {% include share-buttons.html %}-->
+  <div class="post__head">
+    {% if page.title %}
+    <h1 class="post__title">{{ page.title | escape }}</h1>
+    {% endif %}
   </div>
 
-<!--  <section class="section section-related">-->
-<!--    <div class="section__info section__info__center">-->
-<!--      <div class="section__head">-->
-<!--        <span class="section__intro">Unleash creativity...</span>-->
-<!--        <h2 class="section__title">Explore more works</h2>-->
-<!--      </div>-->
-<!--    </div>-->
-
-<!--    <div class="row">-->
-<!--    {% assign project-collection = site[page.collection] | sample:4 %}-->
-<!--    {% assign relatedCount = 0 %}-->
-<!--    {% for project in project-collection %}-->
-<!--      {% if project.url != page.url %}-->
-<!--      <article class="project col col-4 col-d-6 col-t-12">-->
-<!--        <div class="project__content">-->
-<!--          <a href="{{ project.url }}" class="project__image">-->
-<!--            {% if project.image and project.video_embed %}-->
-<!--            <div class="video-icon">-->
-<!--              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">-->
-<!--                <polygon points="40,30 70,50 40,70"></polygon>-->
-<!--              </svg>-->
-<!--            </div>-->
-<!--            {% endif %}-->
-<!--            <img class="lazy" data-src="{{ project.image | relative_url }}" alt="{{ project.title }}">-->
-<!--          </a>-->
-<!--          <div class="project__info">-->
-<!--            {% if project.label %}-->
-<!--            <div class="project__label">{{ project.label }}</div>-->
-<!--            {% endif %}-->
-<!--            {% if project.title %}-->
-<!--            <h3 class="project__title"><a class="project__link" href="{{ project.url | relative_url }}">{{ project.title }}</a></h3>-->
-<!--            {% endif %}-->
-<!--          </div>-->
-<!--        </div>-->
-<!--      </article>-->
-<!--      {% assign relatedCount = relatedCount | plus: 1 %}-->
-<!--      {% if relatedCount >= 3 %}-->
-<!--        {% break %}-->
-<!--      {% endif %}-->
-<!--      {% endif %}-->
-<!--    {% endfor %}-->
-<!--    </div>-->
-<!--  </section>-->
-
+    <div class="container">
+        <div class="project-content">
+            {{ content }}
+        </div>
+    </div>
 </div>
+</main>
+<!-- end content -->
 
-<!--{% include section-faq.html %}-->
+{% include footer.html %}
 
-{% include section-subscribe.html %}
+<script src="{{ site.baseurl }}/js/scripts.js"></script>
+<script src="{{ site.baseurl }}/js/common.js"></script>
+</body>
+
+</html>
