--- a/_includes/section-hero.html
+++ b/_includes/section-hero.html
@@ -37,7 +37,20 @@
             </div>
           </div>
           {% endif %}
-
+        </div>
+      </div>
+    </div>
+    <div class="row" style="margin-top: 50px; margin-bottom: 50px">
+      <div class="col col-3" >
+      </div>
+      <div class="col col-3" >
+        <div class="nav-button">
+          <a href="https://github.com/petrbouda/jeffrey/releases/latest/download/jeffrey.jar" class="button cta-button">Download Jeffrey App</a>
+        </div>
+      </div>
+      <div class="col col-3" >
+        <div class="nav-button">
+          <a href="https://github.com/petrbouda/jeffrey/releases/latest/download/jeffrey-cli.jar" class="button cta-button">Download Jeffrey CLI</a>
         </div>
       </div>
     </div>
